2008-07-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/locale.cpp: Add string.h header, from patch by Marcus
	Hufgard. Allows compilation with GCC 4.3.1 on Linux:
	PR#2008642.

	* src/formats/gausszmatformat.cpp: Add definition of
	strcasestr if not defined. Solves compile problems on Cygwin.

	* configure.in, src/config.h.in, configure: Check for
	rpc/xdr.h needed for xtcformat.

	* src/formats/xtcformat.cpp: Use new HAVE_RPC_XDR_H #define.

2008-07-02  Chris Morley

	* src/descriptor.cpp(PredictandSave): don't duplicate an existing
	OBPairData. Was crashing when adding a property that was already
	present. 
	 
	* src/formats/smilesformat.cpp(StandardLabels): A couple of vectors now
	have 2147483647 pushed when the atom is H, to match the situation with
	canonical ordering, rather than ending up with a size smaller than the
	number of atoms. I assume 2147483647 = 2^31-1 is just a big number?
	Fixes bug 1999348.

2008-07-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/kekulize.cpp (expandcycle): Add more flexible API for
	expandcycle.

	* scripts/perl/Makefile.PL: Update from Noel for PR#2007797.

	* Makefile.*, configure.*: Update for 2.2.0 release.

2008-07-01  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/atomrecord.cpp: Fix bug where arginine hydrogen atoms
	where read as dummy Xx atoms. (#2002557)

	* src/formats/pdbformat.cpp: 1) Write the chain number. 2) Don't
	rearrange atom ids when writing. (see chains item 2)

	* src/chains.cpp: 1) Serine OG is now given the correct atom id.
	2) produce correctly ordered atom ids (see pdbformat item 2)
	3) fix for cyclic peptides (have no NTer)
	4) water, ions and ligands are all placed in the ' ' chain now and get
	unique residue numbers.
	5) partially identified residues are merged with the atoms not used to
	identify them and the resids is set to UNK (hetflags is also set to
	true) (e.g. CSD in 1LWF = CYS with two O's on S )

2008-07-01  Noel O'Boyle  <baoilleach@gmail.com>
